Sign up/in/out and simple profile implementation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,23 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  defaults:
+    title: "Tagmar"
+    project_name: "Tagmar"
+    toggle_navigation: "Toggle Navigation"
+
+  buttons:
+    sign_in: "Sign In"
+    sign_up: "Sign Up"
+    sign_out: "Sign Out"
+
+  home:
+    index:
+      welcome:
+        title: "Welcome to Tagmar"
+        description: "Tagmar is an online RPG game that you can run in your browser and play with your friends!"
+        sign_up: "Sign up &raquo;"
+      characters:
+        title: "Create your characters"
+        description: "You create as many characters as you want. Choose one and start your adventure!"
+      play:
+        title: "Play with your friends"
+        description: "Create a party with your friends and start an adventure online!"
